<resources>
    <string name="app_name">POS Terminal</string>
    <string name="dev">Dev</string>
    <string name="test">Test</string>
    <string name="custom">Custom</string>
    <string name="forgot_pass">Forgot \nPassword</string>
    <string name="log_in">Log \nIn</string>
    <string name="password">Password</string>
    <string name="phone_no">Phone Number</string>
    <string name="tckn_vkn">TCKN/VKN</string>
    <string name="terminal_id">Terminal ID</string>
    <string name="member_id">Merchant ID</string>
    <string name="verification_code">Verification Code</string>
    <string name="verification_content">Please enter the code sent to your phone number.</string>
    <string name="sample_phone_number">(+90 538 XXX XX 37)</string>
    <string name="change_password">Change Password</string>
    <string name="change_pass_content">Please enter your TCKN/VKN and phone number to create a new password.</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="verify">Verify</string>
    <string name="temporary_pin">Temporary PIN</string>
    <string name="new_password">New Password</string>
    <string name="new_password_again">New Password Again</string>
    <string name="password_reset">Password Reset</string>
    <string name="password_reset_content">Please enter the temporary PIN and your new password sent to your phone.</string>
    <string name="remember_me">Remember Me</string>
    <string name="manager">MANAGER</string>
    <string name="cashier">CASHIER</string>
    <string name="resend">Resend</string>
    <string name="timer">2:00</string>
    <string name="not_matched">Incorrect password, please try again</string>
    <string name="matched">Login Successful</string>
    <string name="pass_db_null">PasswordFromDb is null</string>
    <string name="uye_isyeri_no">Merchant Number</string>
    <string name="cashier_forgot_password_warn">Only Manager accounts can change passwords</string>
    <string name="empty_fields">Please fill in all fields.</string>
    <string name="start_sale">Start Sale</string>
    <string name="cancel_sale">Cancel Sale</string>
    <string name="e_document">E-Document</string>
    <string name="show_products">Show Products</string>
    <string name="payment_operations">Payment Operations</string>
    <string name="options">Options</string>
    <string name="no_category">No Category Found!</string>
    <string name="no_service">No Service Found</string>
    <string name="no_product">No Product Found</string>
    <string name="product_content">Click the plus (+) button below to add a product.</string>
    <string name="category_content">Click the plus (+) button below to add a category.</string>
    <string name="service_content">Click the plus (+) button below to add a service.</string>
    <string name="order_no">Order No:</string>
    <string name="sample_order_no">2207197154300005741886</string>
    <string name="empty_shopping_cart">Empty Cart</string>
    <string name="button_cash">Cash</string>
    <string name="button_credit_card">Credit Card</string>
    <string name="service_product_code">Service/Product Code</string>
    <string name="service_product_content">Service/Product Content</string>
    <string name="quantity">Quantity/Unit</string>
    <string name="cost">Amount</string>
    <string name="sample_sum_cost">₺00.00</string>
    <string name="sum">Total:</string>
    <string name="kdv">VAT:</string>
    <string name="sample_kdv_cost">₺00.00</string>
    <string name="swipe">Swipe Card</string>
    <string name="item_delete">Delete</string>
    <string name="item_edit">Edit</string>
    <string name="camera_category">Add category image.</string>
    <string name="camera_product">Add product image.</string>
    <string name="warn_price">Please use a comma when writing the price.</string>
    <string name="api_level_warn">Required min API level is 26.</string>
    <string name="order_successful">Order created successfully</string>
    <string name="order_cancel">Order cancelled</string>
    <string name="loading">Loading...</string>
    <string name="add_cashier">Add Cashier</string>
    <string name="success_add_cashier">Operation completed successfully.</string>
    <string name="dialog_empty">Empty Cart</string>
    <string name="dialog_content_empty">Are you sure you want to perform this action?</string>
    <string name="email">E-Mail</string>
    <string name="customer_information">Please fill in at least one of the information fields.</string>
    <string name="adapter_document_no">Document No</string>
    <string name="adapter_mali_id">Fiscal ID</string>
    <string name="adapter_terminal_id">Terminal ID</string>
    <string name="couldnt_get_order">Failed to retrieve order details</string>
    <string name="adapter_all_result">All Results</string>
    <string name="adapter_successful">Successful Sale</string>
    <string name="adapter_basket_cancel">Cart Cancelled</string>
    <string name="adapter_cancel_sale">Sale Cancelled</string>
    <string name="adapter_all_documents">All Documents</string>
    <string name="adapter_today">Today</string>
    <string name="adapter_yesterday">Yesterday</string>
    <string name="adapter_last_week">Last Week</string>
    <string name="adapter_last_month">Last Month</string>
    <string name="adapter_e_receipt">E-Invoice</string>
    <string name="adapter_e_archive_receipt">E-Archive Invoice</string>
    <string name="add_product">product added to your cart.</string>
    <string name="navigation_from">from</string>
    <string name="navigation_from_category">category</string>
    <string name="navigation_from_product">product</string>
    <string name="category_id_or_product_id">category_id_or_product_id</string>
    <string name="products_category_id">productsCategoryId</string>
    <string name="no_authorization">You are not authorized.</string>

    <string name="user_terminal_id">terminal_id</string>
    <string name="user_vkn_tckn">vkn_tckn</string>
    <string name="user_uye_isyeri_no">merchant_no</string>
    <string name="user_password">password</string>
    <string name="user_full_name">full_name</string>
    <string name="user_date">date</string>
    <string name="user_time">time</string>
    <string name="user_iptal_iade">cancel_refund</string>
    <string name="user_tahsilat">collection</string>
    <string name="user_kasiyer_goruntuleme">cashier_view</string>
    <string name="user_kasiyer_ekleme_duzenleme">cashier_add_edit</string>
    <string name="user_kasiyer_silme">cashier_delete</string>
    <string name="user_urun_goruntuleme">product_view</string>
    <string name="user_urun_ekleme_duzenleme">product_add_edit</string>
    <string name="user_urun_silme">product_delete</string>
    <string name="user_tum_raporları_goruntuleme">view_all_reports</string>
    <string name="user_rapor_kaydet_gonder">save_send_report</string>
    <string name="user_pos_yonetimi">pos_management</string>
    <string name="user_admin">admin</string>
    <string name="user_remember_me_manager">remember_me_manager</string>
    <string name="user_remember_me_terminal">remember_me_terminal</string>
    <string name="offline_mode_available">offline</string>
</resources>
